--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,6 +10,25 @@
 }
 
 .page-heading {
-  font-size: 50px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 75px;
+  letter-spacing: 3px;
   font-weight: 300;
+  background-image: linear-gradient(
+    45deg,
+    rgba(131, 12, 12, 1) 0%,
+    rgba(209, 101, 23, 1) 19%,
+    rgba(246, 191, 26, 1) 37%,
+    rgba(14, 162, 6, 1) 53%,
+    rgba(35, 174, 175, 1) 68%,
+    rgba(2, 3, 226, 1) 85%,
+    rgba(255, 3, 245, 1) 100%
+  );
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  text-transform: uppercase;
+  transition: all 0.5s;
 }
